--- a/public/package.json
+++ b/public/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-toast": "^1.2.5",
     "@radix-ui/react-tooltip": "^1.1.7",
     "@react-pdf/renderer": "^4.2.2",
+    "@reduxjs/toolkit": "^2.6.1",
     "@tailwindcss/forms": "^0.5.10",
     "@tanstack/react-query": "^5.64.2",
     "@tanstack/react-table": "^8.21.2",
@@ -41,7 +42,9 @@
     "react-day-picker": "^9.5.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.54.2",
+    "react-icons": "^5.5.0",
     "react-lazy-load-image-component": "^1.6.3",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.3.0",
     "react-toastify": "^11.0.3",
     "recharts": "^2.15.1",
